first version mobile fix

--- a/tia/css/style.css
+++ b/tia/css/style.css
@@ -1,4 +1,19 @@
 
+@media screen and (max-device-width : 640px)
+{
+  body or yourdiv element
+  {
+    font-size: 2vw;
+  }
+}
+@media screen and (min-device-width : 640px)
+{
+  body or yourdiv element
+  {
+    font-size: 1.7vw;
+  }
+}
+
 body {
        font-family: 'Merriweather','Oswald', sans-serif;
          font-size: 1.7vw;
